# mongodb-genai-rag-apps

./: README.md  pyproject.toml
hybrid_search/: queries.mql
rag/: generation.py  key_param.py  retrieval.py
vector_search/: indexes-and-queries.mql  vector_embeddings.py
