[project]
name = "genai-apps-mongodb-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-mongodb>=0.7.0",
    "langchain-openai>=0.3.33",
    "pymongo>=4.15.1",
    "pypdf>=6.0.0",
]
